<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bs.hackathon.group.hackathonbs.NewEvent01Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/h_newevent"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/ph_title"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="42dp" />
            <!--
            <Button
                android:id="@+id/buttonDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_date"
                />
                -->
            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_time" />

            <TimePicker
                android:id="@+id/timePicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/gesuch_beschreibung"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gesuch_ortseinstellung"
                android:textAlignment="center"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_otherlocation" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="phone"
                android:visibility="gone" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_gesuch_send"
                android:textColor="#FFFFFFFF" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
